[tool.poetry]
name = "servo-metrics"
version = "0.2.0"
description = "A servo connector that tracks metrics and exposes them in Prometheus format"
authors = ["Blake Watters <blake@opsani.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/opsani/servo-metrics"
repository = "https://github.com/opsani/servo-metrics"

[tool.poetry.dependencies]
python = "^3.8"
aioprometheus = "^20.0.1"
servox = "^0.10.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
asynctest = {git = "https://github.com/Martiusweb/asynctest.git", rev = "py3.8"}

[tool.poetry.plugins."servo.connectors"]
"servo-metrics" = "servo_metrics:MetricsConnector"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
